docs/styles/style.css
/* ... */
.overflow-killer {
  overflow-x: hidden;
}

hr {
  border: 1px solid var(--color-foreground-level-3);
}

svg {
  flex-shrink: 0;
}

.container {
  margin: 2rem auto 4rem;
  padding: 0 2rem;
}

::selection {
  background-color: var(--color-primary);
  color: white;
}

.blend {
  mix-blend-mode: exclusion;
  color: var(--color-background);
}

input[type="email"],
input[type="text"] {
  /*Remove the default browser styles*/
  -webkit-appearance: none;
  -moz-appearance: none;
}

input[type="email"] {
  padding: 0 0 0 0.5rem;
  border-radius: 0.5rem;
  margin: 0 0.5rem;
  color: var(--color-background);
  width: 15.625rem;
  height: 2rem;
}

button {
  padding: 0 0.75rem;
  border-radius: 0.5rem;
  height: 2rem;
  color: var(--color-background);
  cursor: pointer;
  border: 0.0625rem solid var(--color-foreground-level-2);
  font-weight: 600;
}

button:active {
  transition: none;
  opacity: 0.5;
}

/* HEADER */

header {
  max-width: 105rem;
  margin: 2rem auto;
  padding: 0 2rem;
  text-align: left;
}

header #logo {
  text-decoration: none;
  border: 0;
}

#logo svg {
  width: 8rem;
}

header {
  display: flex;
  justify-content: space-between;
}

header nav {
  display: flex;
  position: relative;
  align-items: flex-end;
}

header nav a {
  margin-right: 2rem;
  font-size: 1.25rem;
  font-weight: 600;
  color: var(--color-foreground);
  text-decoration: none;
  white-space: nowrap;
  border: 0;
}

header nav a:first-child {
  margin-left: 2rem;
}

header nav a:last-child {
  margin-right: 0;
}

#download button {
  width: 100%;
}

#download button svg {
  fill: var(--color-background);
  box-sizing: unset;
  margin-top: -0.2rem;
  margin-right: 0.5rem;
}

nav a:hover,
nav a.active {
  text-decoration: none;
  color: var(--color-secondary);
}

nav a span {
  border: none;
}

nav a:hover span,
nav a.active span {
  border-bottom: 0.125rem solid;
}

@media only screen and (max-width: 30rem) {
  #logo svg {
    width: 6rem;
  }

  header nav {
    margin-top: 1rem;
  }

  header {
    flex-direction: column;
    align-items: center;
  }
  header nav a:first-child {
    margin-left: 0rem;
  }
}

@media only screen and (max-width: 40rem) {
  header nav {
    align-items: center;
  }
  header nav a {
    font-size: 0.875rem;
    margin-right: 0.875rem;
  }

  a.try-it {
    display: none;
  }
}

@media only screen and (max-width: 48rem) {
  a.try-it,
  #download button {
    display: none;
  }

  a.code {
    margin-right: 0;
  }
}

/* SUBTITLE */

#headline {
  position: relative;
  background: var(--color-foreground-level-1);
  display: flex;
  flex-direction: column;
}

#headline h2 {
  font-weight: 600;
  background-color: var(--color-background);
  z-index: 2;
  position: relative;
  padding: 1rem 1.5rem;
  border-radius: 0.5rem;
  margin: 0 auto;
  width: min-content;
  white-space: nowrap;
}

@media only screen and (max-width: 40.5rem) {
  #headline h2 span {
    display: block;
  }
}

@media only screen and (max-width: 30rem) {
  #headline h2 {
    font-size: 1rem;
  }
}

.gif {
  border-radius: 0.25rem;
}

.headline-gif {
  position: absolute;
  top: 19vw;
  left: 23vw;
  width: 40vw;
  z-index: 0;
}

@media only screen and (max-width: 30rem) {
  .headline-gif {
    top: 70vw;
    left: 12vw;
    width: 60vw;
  }
}

.headline {
  text-transform: uppercase;
  font-size: 30vw;
  background: linear-gradient(
    90deg,
    #ff5555 -8.25%,
    #0000ff 2.57%,
    #00bf66 33.08%,
    #b0b305 51.57%
  );
  color: #000;
  mix-blend-mode: exclusion;
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

@media only screen and (min-width: 105rem) {
  .headline {
    font-size: 32rem;
  }
}

@media only screen and (max-width: 60rem) {
  .headline {
    font-size: 26.5vw;
  }
}

@media only screen and (max-width: 30rem) {
  .headline {
    font-size: 50vw;
    line-height: 40vw;
    padding-top: 4vw;
  }
  h1.subscribed {
    font-size: 38vw;
  }
}

/* GET THE APP */

.email-signup {
  align-items: center;
  align-self: center;
  background-color: black;
  border-radius: 1rem;
  display: flex;
  padding: 1rem;
  position: relative;
  width: max-content;
  z-index: 1;
}

@media only screen and (max-width: 30rem) {
  .email-signup p,
  .email-signup form {
    margin: 0;
  }
}

.email-signup p {
  font-size: 1.4rem;
  padding-left: 1rem;
  color: var(--color-background);
}

@media only screen and (max-width: 62.5rem) {
  .email-signup {
    flex-direction: column;
    padding: 1.5rem 1.25rem;
    row-gap: 1rem;
    width: 22rem;
  }

  .email-signup .main-cta > input[type="email"] {
    width: 23.4rem;
  }
}

.main-cta input[type="email"],
.main-cta button {
  font-size: 1.5rem;
  height: 3rem;
}

.main-cta button {
  background-color: var(--color-primary);
  border: none;
  padding: 0 1rem;
}

@media only screen and (max-width: 80rem) {
  .email-signup p,
  .email-signup button,
  .email-signup .main-cta > input[type="email"] {
    font-size: 1rem;
  }

  .email-signup .main-cta > input[type="email"],
  .email-signup button {
    height: 2rem;
  }
  .email-signup .main-cta > input[type="email"] {
    width: 10.75rem;
  }
}

@media only screen and (max-width: 40rem) {
  .email-signup .main-cta > input[type="email"] {
    margin-left: 0;
  }

  #get-the-app p,
  #get-the-app form {
    margin: 0;
    padding: 0;
  }

  #email-signup input[type="email"],
  #email-signup form button,
  #email-signup p {
    width: 80vw;
    margin-left: 0;
  }

  #email-signup form button,
  #email-signup p {
    margin-bottom: 1rem;
  }

  #email-signup input[type="email"] {
    margin-bottom: 0.5rem;
  }
}

/* FEATURES */

#features {
  position: relative;
  max-width: 100rem;
  margin: 10vw auto 0;
  background: var(--color-foreground-level-1);
}

.features-gif {
  margin-bottom: -32rem;
  position: absolute;
  top: 79vw;
  right: -3rem;
  z-index: -1;
}

@media only screen and (max-width: 30rem) {
  .features-gif {
    width: 70vw;
    top: 62vw;
  }
}
/* ... */

